# 2026_Pipette2Code

./: README.md
01_Introduction_TGomes/: AnalysisIntro.Rmd  PreparingSeuratObject.Rmd  copyData.sh  scanpy_tutorial.ipynb
02_Trajectories_ZHe/: .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
02_Trajectories_ZHe/vignettes/: Tutorial_cleared.ipynb
03_Integration_SKoplev/: 0_format_to10x.sh  1_parse_data.ipynb  2_full_healthy_reference_AP_all_organs_finalmodel.pkl  2_quality_control.ipynb  3_scanpy_integration.ipynb  5_scvi_integration_v2.ipynb
04_ImmuneReceptors_AMaceiras/: BCR_preprocessing.ipynb  TCR_preprocessing.ipynb
